Fix dark mode on index

--- a/css/app.css
+++ b/css/app.css
@@ -8,6 +8,8 @@
 }
 @media (prefers-color-scheme: dark) {
   :root {
+    --grey: #242424;
+    --lightgrey: #444;
     --bgcolor: #171717;
     --contrast: #C8C8C8;
     --dropdown: url('../img/dropdown-dark.svg');
